Upgraded to support vector ops which give at times a substantial speed boost specifically for dot product and magnitude-squared.